--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,18 +1,12 @@
 {
-    "env": {
-        "commonjs": true,
-        "es6": true,
-        "jest": true,
-        "node": true
-    },
-    "extends": "eslint:recommended",
-    "globals": {
-        "Atomics": "readonly",
-        "SharedArrayBuffer": "readonly"
-    },
-    "parserOptions": {
-        "ecmaVersion": 2018
-    },
-    "rules": {
-    }
+  "extends": ["airbnb-base"],
+  "plugins": ["jest"],
+  "rules": {
+    "no-underscore-dangle": 0,
+    "arrow-body-style": 0,
+    "no-console": 0
+  },
+  "env": {
+    "jest/globals": true
+  }
 }
