--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,7 @@ on:
   pull_request:
   push:
     branches:
-      - main
+      - master
       - 'releases/*'
 
 jobs:
@@ -22,4 +22,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: ./
       with:
-        milliseconds: 1000
+        csvinput: |
+          First Name, Last Name, Address, Town, State, Zip
+          John,Doe,120 jefferson st.,Riverside, NJ, 08075
+          Jack,McGinnis,220 hobo Av.,Phila, PA,09119
