--- a/package.json
+++ b/package.json
@@ -25,11 +25,15 @@
   },
   "homepage": "https://github.com/actions/javascript-action#readme",
   "dependencies": {
-    "@actions/core": "^1.2.5"
+    "@actions/core": "^1.2.5",
+    "csvtomd-lib": "^0.1.3"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.24.0",
-    "eslint": "^7.4.0",
+    "eslint": "^7.9.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^24.0.1",
     "jest": "^26.1.0"
   }
 }
