--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,13 +8,10 @@ on:
 
 jobs:
   # unit tests
-  units:
+  unit:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
-      with:
-        node-version: 16
+    - uses: actions/checkout@v2
     - run: npm ci
     - run: npm test
 
