Update Package file

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "javascript-action",
-  "version": "1.0.0",
-  "description": "JavaScript Action Template",
+  "name": "csv-to-md-table-action",
+  "version": "2.0.0",
+  "description": "Convert CSV input into markdown table output",
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/javascript-action.git"
+    "url": "git+https://github.com/petems/csv-to-md-table-action.git"
   },
   "keywords": [
     "GitHub",
@@ -21,9 +21,9 @@
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/actions/javascript-action/issues"
+    "url": "https://github.com/petems/csv-to-md-table-action/issues"
   },
-  "homepage": "https://github.com/actions/javascript-action#readme",
+  "homepage": "https://github.com/petems/csv-to-md-table-action#readme",
   "dependencies": {
     "@actions/core": "^1.9.1",
     "csvtomd-lib": "^0.1.3"
