--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,9 +11,12 @@ jobs:
   unit:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - run: npm ci
-    - run: npm test
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - run: npm ci
+      - run: npm test
 
   # test action works running from the graph
   test:
